# IdasenControl

./: .clang-format  .gitignore  LICENSE  README.md  meson.build
po/: LINGUAS  POTFILES  meson.build  ru.po
resources/: idasencontrol.gresource.xml  meson.build
resources/css/: styles.css
resources/data/: io.github.vchig.IdasenControl.desktop  io.github.vchig.IdasenControl.gschema.xml  io.github.vchig.IdasenControl.yml  meson.build
resources/ui/: bluetooth_device_info.ui  main_window.ui  position.ui  preference.ui
src/: desk_position_row.c  desk_position_row.h  idasen_application.c  idasen_application.h  idasen_desk.c  idasen_desk.h  idasen_main_window.c  idasen_main_window.h  idasen_position.c  idasen_position.h  idasen_preference.c  idasen_preference.h  main.c  meson.build
src/bt/: bt_adapter.c  bt_adapter.h  bt_device.c  bt_device.h  bt_device_list.c  bt_device_list.h  bt_gatt_characteristic.c  bt_gatt_characteristic.h  bt_gatt_service.c  bt_gatt_service.h  bt_manager.c  bt_manager.h  bt_proxy.c  bt_proxy.h  meson.build
src/bt/dbus/: bt_dbus_manager.c  bt_dbus_manager.h  bt_dbus_proxy.c  bt_dbus_proxy.h  meson.build
